--- a/HIMARMS/Views/Shared/_SideBar.cshtml
+++ b/HIMARMS/Views/Shared/_SideBar.cshtml
@@ -3,72 +3,43 @@
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
             <li class="active">
-                <a class="" href="index.html">
+                <a class="" href="~/Dashboard/Index">
                     <i class="icon_house_alt"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;" class="">
-                    <i class="icon_document_alt"></i>
-                    <span>Forms</span>
+                    <i></i>
+                    <span>User Managment</span>
                     <span class="menu-arrow arrow_carrot-right"></span>
                 </a>
                 <ul class="sub">
-                    <li><a class="" href="~/MiningLicense/Index">Form Elements</a></li>
-                    <li><a class="" href="form_validation.html">Form Validation</a></li>
+                    <li><a class="" href="~/User/Index">Create User</a></li>
+                    <li><a class="" href="~/User/UserReport">View Users</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;" class="">
-                    <i class="icon_desktop"></i>
-                    <span>UI Fitures</span>
+                    <i></i>
+                    <span>Department Management</span>
                     <span class="menu-arrow arrow_carrot-right"></span>
                 </a>
                 <ul class="sub">
-                    <li><a class="" href="general.html">Elements</a></li>
-                    <li><a class="" href="buttons.html">Buttons</a></li>
-                    <li><a class="" href="grids.html">Grids</a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="" href="widgets.html">
-                    <i class="icon_genius"></i>
-                    <span>Widgets</span>
-                </a>
-            </li>
-            <li>
-                <a class="" href="chart-chartjs.html">
-                    <i class="icon_piechart"></i>
-                    <span>Charts</span>
-
-                </a>
-
-            </li>
-
-            <li class="sub-menu">
-                <a href="javascript:;" class="">
-                    <i class="icon_table"></i>
-                    <span>Tables</span>
-                    <span class="menu-arrow arrow_carrot-right"></span>
-                </a>
-                <ul class="sub">
-                    <li><a class="" href="basic_table.html">Basic Table</a></li>
+                    <li><a class="" href="~/Departments/Index">Create Department</a></li>
+                    <li><a class="" href="~/Departments/DepartmentReport">View Department</a></li>
                 </ul>
             </li>
 
             <li class="sub-menu">
                 <a href="javascript:;" class="">
-                    <i class="icon_documents_alt"></i>
-                    <span>Pages</span>
+                    <i></i>
+                    <span>Licence Management</span>
                     <span class="menu-arrow arrow_carrot-right"></span>
                 </a>
                 <ul class="sub">
-                    <li><a class="" href="profile.html">Profile</a></li>
-                    <li><a class="" href="login.html"><span>Login Page</span></a></li>
-                    <li><a class="" href="contact.html"><span>Contact Page</span></a></li>
-                    <li><a class="" href="blank.html">Blank Page</a></li>
-                    <li><a class="" href="404.html">404 Error</a></li>
+                    <li><a class="" href="~/MiningLicense/Index">Create New Licence</a></li>
+                    <li><a class="" href="~/MiningLicense/ViewLicenses">View Licences</a></li>
                 </ul>
             </li>
 
